DevTools: Fix diff wrapping in Local modifications view.
BUG=409768

Review URL: https://codereview.chromium.org/535173002

git-svn-id: svn://svn.chromium.org/blink/trunk@181393 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/revisionHistory.css
+++ b/front_end/revisionHistory.css
@@ -88,3 +88,7 @@
 .revision-history-line-separator .webkit-line-number {
     color: transparent;
 }
+
+.revision-history-line {
+    white-space: nowrap;
+}
